Updated the Success Message

--- a/src/app/add-student/add-student.component.html
+++ b/src/app/add-student/add-student.component.html
@@ -42,14 +42,6 @@
             </div>
             <br>
             <div class="row">
-                <div class="col-md-2">
-                    <label class="formLbl">Upload Student's Picture</label>
-                </div>
-                <div class="col-md-10">
-                    <input type="file" >
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-md-6">
                     <p class="resetbtn"><input type="reset"></p>
                     
@@ -58,6 +50,7 @@
                     <p><input type="submit" value="Add Student"></p>
                 </div>
             </div>
+            <p class="successMsg" *ngIf="isSuccess">The Update is Successful</p>
         </div>
     </form>
 </div>
